@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.79 2012/10/10 11:59:26 jmmv Exp $
+$NetBSD: distinfo,v 1.80 2012/10/12 18:27:20 ryoon Exp $
 
-SHA1 (firefox-16.0.1.source.tar.bz2) = ad5723fcf4ec6c6734e2022cecad174290fa425e
-RMD160 (firefox-16.0.1.source.tar.bz2) = 606483401dc16710a167383e3f1d1fbea61b3788
-Size (firefox-16.0.1.source.tar.bz2) = 89452319 bytes
+SHA1 (firefox-16.0.2.source.tar.bz2) = 0ffe96896583e92561b341330ab09ddc50140dd1
+RMD160 (firefox-16.0.2.source.tar.bz2) = 74424c68e594fff842104385bb6c6f2a3a034fd2
+Size (firefox-16.0.2.source.tar.bz2) = 89452077 bytes
 SHA1 (patch-aa) = 2c9a546ae951630e07668c9875d20041a6e5adac
 SHA1 (patch-ab) = b0d7975a291c63e07773e13b023f71e88c883128
 SHA1 (patch-ac) = 18640ddf00b7da9276fd67d95bd6f1b191a99d4f
