@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.51 2011/08/02 17:11:00 joerg Exp $
+$NetBSD: distinfo,v 1.52 2012/03/03 00:17:29 wiz Exp $
 
 SHA1 (gnupg-1.4.12.tar.bz2) = 9b78e20328d35525af7b8a9c1cf081396910e937
 RMD160 (gnupg-1.4.12.tar.bz2) = d5f4367c9a636d778b6ccb2711bfba6597c27fa0
@@ -8,6 +8,6 @@ RMD160 (idea.c.gz) = e35be5a031d10d52341ac5f029d28f811edd908d
 Size (idea.c.gz) = 5216 bytes
 SHA1 (patch-aa) = ad76abec765e95209f884da7701ea4566ddf35f3
 SHA1 (patch-ab) = 24e200a04f8f31e53e22dc80ed079570cb5de8d8
-SHA1 (patch-ac) = 3d53b0ed816b83156ce5f169bd571e46bde78032
-SHA1 (patch-ad) = 99f7af1fb6e6d9d2e25edbe0fb6bc027fbacddcb
-SHA1 (patch-ak) = 89a6a7552104f4d5b97a98889da88fca68c54f31
+SHA1 (patch-ac) = 70b270723be8d54eaa158ec1da896e9792ff9e54
+SHA1 (patch-ad) = 622dce042bbe6a8bd5975b86614b3b894ba8107f
+SHA1 (patch-ak) = cf3afbd3de520c7cc15f8f026e90df6ea8c56367
