@@ -1,4 +1,6 @@
-$NetBSD$
+$NetBSD: patch-ac,v 1.19 2011/08/02 17:11:00 joerg Exp $
+
+Deal with c99 inline semantics.
 
 --- mpi/mpi-inline.h.orig	2008-12-11 16:39:43.000000000 +0000
 +++ mpi/mpi-inline.h
